--- a/vue/package.json
+++ b/vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue",
+  "name": "app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,11 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.1.0",
+    "bootstrap-vue": "^2.2.1",
     "core-js": "^3.4.4",
-    "mapbox-gl": "^1.6.1",
+    "leaflet": "^1.6.0",
     "vue": "^2.6.10",
-    "vue-mapbox": "^0.4.1"
+    "vue2-leaflet": "^2.4.1",
+    "vue2-leaflet-markercluster": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
