--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
+asn1crypto==0.24.0
+beautifulsoup4==4.6.3
 certifi==2018.8.24
+cffi==1.11.5
+chardet==3.0.4
 Click==7.0
+cryptography==2.3.1
 Flask==1.1.1
 Flask-Cors==3.0.8
 gunicorn==19.9.0
+idna==2.7
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.0
+pycparser==2.19
+pyOpenSSL==18.0.0
+PySocks==1.6.8
+requests==2.19.1
 six==1.11.0
+urllib3==1.23
 Werkzeug==0.16.0
